assets/css/style.css
/* Google Font Imports */
@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,700;1,400&display=swap');

/* Universal Font */
* {
    font-family: "Lato", sans-serif;
}

/* General Styles */
h1,
h2,
h3,
h4,
h5,
h6,
p {
    margin: 0;
}

/* Header Styles */
header {
    background-color: rgb(34, 34, 34);
}

header .container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding-top: 20px;
    padding-bottom: 20px;
}

header,
header a {
    color: #fff;
}

/* Header - Left side with logo */

.header__logo-link h1 {
    font-family: "Lobster", cursive;
    font-size: 64px;
}

.header__manager-info {
    text-transform: uppercase;
}

.header__pub-location {
    font-size: 14px;
}

/* Header - Right side with contact and info */
.header__details {
    display: flex;
    flex-direction: column;
    text-align: right;
}

.header__details h2 {
    text-transform: uppercase;
}

.header__phone-details {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    gap: .5rem;
}

.header__phone-number {
    font-size: 20px;
}

.header__opening-times {
    text-transform: uppercase;
    font-family: 'Bebas Neue', sans-serif;
    font-size: 28px;
}

.header__pub-opening-hours-link {
    color: rgb(225, 116, 17);
    font-size: 14px;
}

/* Navbar Styles */



/* Sales Banner Styles */
.sales-banner {
    background-color: rgb(174, 26, 24);
    color: #fff;
    padding: 12px 0;
}
.sales-banner__text {
    font-size: 19px;
    text-transform: uppercase;
}
.sales-banner .container {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    gap: .5rem;
}

.sales-banner__btn {
    min-height: 48px;
    min-width: 148px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgba(0, 0, 0, 0.6);
    border: 1px solid #fff;
    color: #fff;
    font-family: "Bebas Neue", sans-serif;
    font-size: 18px;
}

/* Grid Area (Main Content) */

.signup-module {

}
.img-container {
    width: 200px;
    height: 400px;
}


/* Media Queries */
@media screen and (min-width: 991px) {
    ul.navbar-nav {
        align-items: center;
        justify-content: space-around;
    }

    .navbar-nav .nav-item {
        height: 50px;
    }

    .navbar-nav .nav-item a.nav-link {
        font-family: "Bebas Neue", sans-serif;
        color: #000;
    }
}

@media screen and (max-width: 991px) {
    header .container {
        justify-content: center;
    }
}

